Update links for Aqua-Bot and Uma-Bot

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         
         <h1>Hola soy KG359 y a qui estan mis paginas web
 
-        </h1><a href="https://ibb.co/TD0ncsvD">Aqua-Bot</a>
-        <a href="https://ibb.co/TD0ncsvD">Uma-Bot</a> /n
+        </h1><a href=" https://kevinreyes-garcia-rgb.github.io/Aqua-Bot/">Aqua-Bot</a>
+        <a href="https://kevinreyes-garcia-rgb.github.io/Huma-Uraga-Bot/">Uma-Bot</a> /n
         <a href="https://ibb.co/TD0ncsvD">Carrot</a> /n
         <h1>Paginas de mi amiga 
         <a href="https:/pagina/web">Cuervita</a>
