Update Cuervita link and username in index.html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         <a href="https://kevinreyes-garcia-rgb.github.io/Huma-Uraga-Bot/">Uma-Bot</a> /n
         <a href="https://ibb.co/TD0ncsvD">Carrot</a> /n
         <h1>Paginas de mi amiga 
-        <a href="https:/pagina/web">Cuervita</a>
+        <h1>Username: 𓅨𝘾𝙪𝙚𝙧𝙫𝙞𝙩𝙖𓅨
+        <a href="https://cuervita.the-legacy-code.pro/">Cuervita Panel</a>
         <p class="subtitle">SISTEMA ONLINE /// CONECTADO</p>
     </div>
 
