Fix HTML header tags for friend pages section

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         </h1><a href=" https://kevinreyes-garcia-rgb.github.io/Aqua-Bot/">Aqua-Bot</a>
         <a href="https://kevinreyes-garcia-rgb.github.io/Huma-Uraga-Bot/">Uma-Bot</a> /n
         <a href="https://ibb.co/TD0ncsvD">Carrot</a> /n
-        <h1>Paginas de mi amiga 
-        <h1>Username: 𓅨𝘾𝙪𝙚𝙧𝙫𝙞𝙩𝙖𓅨
+        <h1>Paginas de mi amiga</h1>
+        <h1>Username: 𓅨𝘾𝙪𝙚𝙧𝙫𝙞𝙩𝙖𓅨</h1>
         <a href="https://cuervita.the-legacy-code.pro/">Cuervita Panel</a>
         <p class="subtitle">SISTEMA ONLINE /// CONECTADO</p>
     </div>
